infrastructure/03-apps/vaultwarden/manifests/app.yaml
apiVersion: v1
kind: Service
metadata: { name: vaultwarden, namespace: pass }
spec:
  selector: { app: vaultwarden }
  ports: [{ name: http, port: 80, targetPort: 8080 }]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: pass
  annotations: { argocd.argoproj.io/sync-wave: "5" }
spec:
  replicas: 1
  strategy: { type: Recreate }
  selector: { matchLabels: { app: vaultwarden } }
  template:
    metadata: { labels: { app: vaultwarden } }
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 5649
        fsGroup: 5649
        runAsGroup: 5649
      containers:
        - name: vaultwarden
          image: vaultwarden/server:1.37.0
          securityContext:
            runAsUser: 5649
            runAsGroup: 5649
            runAsNonRoot: true
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - { name: vw-data, mountPath: /data }
      volumes:
        - name: vw-data
          persistentVolumeClaim: { claimName: pass-vw-pvc-static }
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-ingress
  namespace: pass
  annotations:
    argocd.argoproj.io/sync-wave: "10"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.cilium.io/loadbalancer-mode: "shared"
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - pass.tomlab.fr
        - pass.foobarbaz.fr
      secretName: pass-cert-tls
  rules:
    - host: "pass.tomlab.fr"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: vaultwarden, port: { number: 80 } }
    - host: "pass.foobarbaz.fr"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: vaultwarden, port: { number: 80 } }
